<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/p16"
        android:paddingEnd="@dimen/p16">

        <TextView
            android:id="@+id/specialFareTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/special_fare"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/h6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/specialFareTextInputL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="true"
            app:boxStrokeColor="@color/primary_orange"
            app:hintTextColor="@color/primary_orange"
            android:layout_marginTop="@dimen/m16"
            app:layout_constraintTop_toBottomOf="@+id/specialFareTV">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/specialFareEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:maxLength="6"
                android:textColor="@color/primary_orange"
                android:textCursorDrawable="@null"
                android:inputType="number"
                android:hint="@string/enter_fare" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/mobileNoSP"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:spinnerMode="dropdown"
            style="@style/Widget.AppCompat.DropDownItem.Spinner"
            android:entries="@array/mobile_no_prefix_array"
            android:layout_marginTop="@dimen/m16"
            app:layout_constraintTop_toBottomOf="@+id/specialFareTextInputL"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/specialFareNumberTextInputL"
            app:layout_constraintEnd_toStartOf="@+id/specialFareNumberTextInputL"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/specialFareNumberTextInputL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m16"
            app:hintEnabled="true"
            app:boxStrokeColor="@color/primary_orange"
            app:hintTextColor="@color/primary_orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/mobileNoSP"
            app:layout_constraintTop_toBottomOf="@+id/specialFareTextInputL">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mobileNumberEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:maxLength="8"
                android:textColor="@color/primary_orange"
                android:textCursorDrawable="@null"
                android:inputType="number"
                android:hint="@string/enter_mobile" />
        </com.google.android.material.textfield.TextInputLayout>

        <co.example.assets.CustomTV
            android:id="@+id/cancelTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="@dimen/subtitle_1_regular"
            android:padding="@dimen/p16"
            android:textColor="@color/red"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/printBtn"
            app:layout_constraintEnd_toStartOf="@+id/printBtn"
            app:layout_constraintTop_toTopOf="@+id/printBtn"
            />

        <co.example.assets.CustomBtn
            android:id="@+id/printBtn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/print"
            android:textSize="@dimen/h6"
            android:textColor="@color/green"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_margin="16dp"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/m16"
            app:layout_constraintTop_toBottomOf="@+id/specialFareNumberTextInputL"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>